# wasm-hello

./: .gitignore  Cargo.toml  README.md  build.nix  cli  default.nix  index.html  rust-toolchain  wasm-hello.js  wasm-hello_bg.wasm
.github/workflows/: build.yaml
src/: main.rs
