[package]
name = "wasm-hello"
version = "0.1.0"
authors = ["Nico"]
edition = "2018"
description = "Hello wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced" }
iced_web = "0.4"
wasm-bindgen = "0.2.78"
wee_alloc = "0.4"

[profile.release]
lto = true
opt-level = 's'